Changes since 2.24
------------------
  * Allow skipping kill_process_tree().

Changes since 2.23
------------------
  * NSSM once again calls TerminateProcess() correctly.

Changes since 2.22
------------------
  * NSSM no longer clutters the event log with "The specified
    procedure could not be found" on legacy Windows releases.

  * Fixed failure to set a local username to run the service.

Changes since 2.21
------------------
  * Existing services can now be managed using the GUI
    or on the command line.

  * NSSM can now set the priority class and processor
    affinity of the managed application.

  * NSSM can now apply an unconditional delay before
    restarting the application.

  * NSSM can now optionally rotate existing files when
    redirecting I/O.

  * Unqualified path names are now relative to the
    application startup directory when redirecting I/O.

  * NSSM can now set the service display name, description,
    startup type and log on details.

  * All services now receive a standard console window,
    allowing them to read input correctly (if running in
    interactive mode).

Changes since 2.20
------------------
  * Services installed from the GUI no longer have incorrect
    AppParameters set in the registry.

Changes since 2.19
------------------
  * Services installed from the commandline without using the
    GUI no longer have incorrect AppStopMethod* registry
    entries set.

Changes since 2.18
------------------
  * Support AppEnvironmentExtra to append to the environment
    instead of replacing it.

  * The GUI is significantly less sucky.

Changes since 2.17
------------------
  * Timeouts for each shutdown method can be configured in
    the registry.

  * The GUI is slightly less sucky.

Changes since 2.16
------------------
  * NSSM can now redirect the service's I/O streams to any path
    capable of being opened by CreateFile().

  * Allow building on Visual Studio Express.

  * Silently ignore INTERROGATE control.
