@@ -22,13 +22,15 @@ typedef struct {
   __int64 size;
   unsigned long *tid_ptr;
   unsigned long *rotate_online;
+  bool copy_and_truncate;
+  unsigned long rotate_delay;
 } logger_t;
 
-int get_createfile_parameters(HKEY, TCHAR *, TCHAR *, unsigned long *, unsigned long, unsigned long *, unsigned long, unsigned long *, unsigned long);
+int get_createfile_parameters(HKEY, TCHAR *, TCHAR *, unsigned long *, unsigned long, unsigned long *, unsigned long, unsigned long *, unsigned long, bool *);
 int set_createfile_parameter(HKEY, TCHAR *, TCHAR *, unsigned long);
 int delete_createfile_parameter(HKEY, TCHAR *, TCHAR *);
 HANDLE write_to_file(TCHAR *, unsigned long, SECURITY_ATTRIBUTES *, unsigned long, unsigned long);
-void rotate_file(TCHAR *, TCHAR *, unsigned long, unsigned long, unsigned long);
+void rotate_file(TCHAR *, TCHAR *, unsigned long, unsigned long, unsigned long, unsigned long, bool);
 int get_output_handles(nssm_service_t *, STARTUPINFO *);
 void close_output_handles(STARTUPINFO *);
 unsigned long WINAPI log_and_rotate(void *);
