@@ -23,11 +23,13 @@
 #define NSSM_REG_STDIO_SHARING _T("ShareMode")
 #define NSSM_REG_STDIO_DISPOSITION _T("CreationDisposition")
 #define NSSM_REG_STDIO_FLAGS _T("FlagsAndAttributes")
+#define NSSM_REG_STDIO_COPY_AND_TRUNCATE _T("CopyAndTruncate")
 #define NSSM_REG_ROTATE _T("AppRotateFiles")
 #define NSSM_REG_ROTATE_ONLINE _T("AppRotateOnline")
 #define NSSM_REG_ROTATE_SECONDS _T("AppRotateSeconds")
 #define NSSM_REG_ROTATE_BYTES_LOW _T("AppRotateBytes")
 #define NSSM_REG_ROTATE_BYTES_HIGH _T("AppRotateBytesHigh")
+#define NSSM_REG_ROTATE_DELAY _T("AppRotateDelay")
 #define NSSM_REG_PRIORITY _T("AppPriority")
 #define NSSM_REG_AFFINITY _T("AppAffinity")
 #define NSSM_REG_NO_CONSOLE _T("AppNoConsole")
