@@ -2,6 +2,13 @@ Changes since 2.24
 ------------------
   * Allow skipping kill_process_tree().
 
+  * NSSM can now sleep a configurable amount of time after
+    rotating output files.
+
+  * NSSM can now rotate log files by calling CopyFile()
+    followed by SetEndOfFile(), allowing it to rotate files
+    which other processes hold open.
+
 Changes since 2.23
 ------------------
   * NSSM once again calls TerminateProcess() correctly.
